# hisiflash

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  rustfmt.toml
.agents/skills/cli-standards/: SKILL.md
.agents/skills/cli-standards/references/: anti-patterns.md  checklist.md  external-standards.md  help-template.md  option-map.md  review-rubric.md
.agents/skills/rust-library/: SKILL.md
.agents/skills/rust-library/references/: external-references.md
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cli-release.yml  lib-release.yml  release.yml
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: ARCHITECTURE.md  COMPARISON.md  REQUIREMENTS.md
docs/protocols/: PROTOCOL.md  SEBOOT_PROTOCOL.md  WS63_PROTOCOL.md
docs/testing/: AUTOMATED_TESTS.md  CLI_COMPATIBILITY_MATRIX.md  MANUAL_CHECKLIST.md  MANUAL_RUNBOOK.md  RELEASE_VALIDATION.md
hisiflash/: CHANGELOG.md  Cargo.toml  README.md
hisiflash-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
hisiflash-cli/locales/: en.yml  zh-CN.yml
hisiflash-cli/src/: config.rs  help.rs  main.rs  serial.rs
hisiflash-cli/src/commands/: completions.rs  firmware.rs  flash.rs  info.rs  mod.rs  monitor.rs
hisiflash-cli/tests/: cli_contract.rs
hisiflash/src/: error.rs  host.rs  lib.rs  monitor.rs
hisiflash/src/connection/: detect.rs  mod.rs  serial.rs
hisiflash/src/device/: mod.rs
hisiflash/src/image/: fwpkg.rs  mod.rs
hisiflash/src/port/: mod.rs  native.rs  wasm.rs
hisiflash/src/protocol/: crc.rs  mod.rs  seboot.rs  ymodem.rs
scripts/: setup-hooks.sh
