[workspace]
resolver = "2"
members = [
    "hisiflash",
    "hisiflash-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["HiSiFlash Contributors"]
repository = "https://github.com/sanchuanhehe/hisiflash"
description = "A cross-platform tool for flashing HiSilicon chips"
keywords = ["hisilicon", "flash", "ws63", "embedded", "serial"]
categories = ["development-tools", "embedded", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Correctness - deny these
correctness = { level = "deny", priority = -1 }

# Suspicious code - warn
suspicious = { level = "warn", priority = -1 }

# Style - warn
style = { level = "warn", priority = -1 }

# Complexity - warn
complexity = { level = "warn", priority = -1 }

# Performance - warn
perf = { level = "warn", priority = -1 }

# Pedantic - selective
pedantic = { level = "warn", priority = -1 }

# Allow these pedantic lints
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"
similar_names = "allow"
if_not_else = "allow"
single_match_else = "allow"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Interactive prompts
dialoguer = "0.11"
ctrlc = "3.4"

# Serial port
serialport = "4.5"

# Error handling
thiserror = "2"
anyhow = "1"

# Progress & UI
indicatif = "0.17"
console = "0.15"
log = "0.4"
env_logger = "0.11"

# Directories for config files
directories = "6"

# Async (optional, for future features)
# tokio = { version = "1", features = ["full"] }

# Byte manipulation
byteorder = "1.5"

# Internal crates
hisiflash = { version = "0.1.0", path = "hisiflash" }
