[package]
name = "hisiflash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line tool for flashing HiSilicon chips"
keywords = ["hisilicon", "flash", "ws63", "embedded", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[lints]
workspace = true

[[bin]]
name = "hisiflash"
path = "src/main.rs"

[dependencies]
hisiflash.workspace = true
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
ctrlc.workspace = true
directories.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
indicatif.workspace = true
console.workspace = true
log.workspace = true
env_logger.workspace = true
serialport.workspace = true

# Internationalization
rust-i18n = "3"
sys-locale = "0.3"
