[package]
name = "hisiflash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Library for flashing HiSilicon chips"
keywords = ["hisilicon", "flash", "ws63", "embedded", "serial"]
categories = ["development-tools", "embedded"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
byteorder.workspace = true
serde = { workspace = true, optional = true }

# Native serial port (default on non-WASM targets)
serialport = { workspace = true, optional = true }

# WASM dependencies (for Web Serial API support)
web-sys = { version = "0.3", optional = true, features = [
    "Navigator",
    "Serial",
    "SerialPort",
    "SerialOptions",
    "SerialPortInfo",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["native"]
serde = ["dep:serde"]

# Native platform support (Linux, macOS, Windows)
native = ["dep:serialport"]

# WASM/Web support (experimental)
wasm = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]

[dev-dependencies]
env_logger.workspace = true
